<resources>
    <string name="app_name">BudgetCompanionV2</string>

    <!-- Activity Agregar Cliente -->
    <string name="volver">Volver</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="pais">País</string>
    <string name="provincia">Provincia</string>
    <string name="ciudad">Ciudad</string>
    <string name="calle">Calle</string>
    <string name="numero">Número</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="sitio_web">Sitio Web</string>
    <string name="guardar">Guardar</string>
    <string name="home">Home</string>
    <string name="listaclientes">ListaClientes</string>
    <string name="productos">Productos</string>
    <string name="mas">Mas</string>


    <!-- Activity Agregar Producto -->
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="detalle">Detalle:</string>
    <string name="ingrese_detalle_del_producto">Ingrese detalle del producto</string>
    <string name="iconosuperiorizquierdo">ICONOSUPERIORIZQUIERDO</string>



    <!-- Activity Agregar Servicio -->
    <string name="nuevo_servicio">Nuevo Servicio</string>
    <string name="nombre_del_servicio">Nombre del Servicio</string>
    <string name="ingrese_el_nombre_del_servicio">Ingrese el nombre del servicio</string>


    <!-- Activity Articulo Servicio -->
    <string name="servicios">Servicios</string>
    <string name="iconoagregararticulo">ICONOAGREGARARTICULO</string>


    <!-- Activity Contact -->
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>


    <!-- Activity Lista Clientes -->
    <string name="mis_clientes">Mis Clientes</string>
    <string name="contacto">Contacto</string>
    <string name="add">Add</string>


    <!-- Activity Mis Presupuestos -->
    <string name="mis_presupuestos">Mis Presupuestos</string>
    <string name="borrar_presupuesto">Borrar Presupuesto</string>
    <string name="clientes">Clientes</string>


    <!-- Activity Nuevo Presupuesto -->
    <string name="nuevo_presupuesto">Nuevo Presupuesto</string>
    <string name="presupuesto_n">Presupuesto Nº</string>
    <string name="fecha">Fecha</string>
    <string name="agregar_prod_serv">Agregar Prod/Serv</string>
    <string name="ingrese_detalle">Ingrese detalle</string>
    <string name="total_unitario">Total Unitario</string>


    <!-- Activity Ver Presupuesto -->
    <string name="compartir">Compartir</string>
    <string name="cliente">Cliente:</string>
    <string name="Fecha">Fecha:</string>
    <string name="total">Total:</string>



</resources>