<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoClienteActivity">


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefono"
        tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextProvincia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/provincia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPais"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextCiudad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProvincia"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextCalle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/calle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCiudad"
        tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalle"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextCP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sitio_web"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCP"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnGuardarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#034186"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeb" />


</androidx.constraintlayout.widget.ConstraintLayout>