<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPresupuestoActivity">


    <ImageView
        android:id="@+id/iconoSuperiorIzquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iconosuperiorizquierdo" />


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_presupuesto"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/textViewNombrePresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presupuesto_n"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>


    <EditText
        android:id="@+id/editTextAgregarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/agregar_cliente"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombrePresupuesto"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/fecha"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAgregarCliente"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/editTextAgregarProductoServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/agregar_prod_serv"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFecha"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <EditText
        android:id="@+id/editTextNombrePresupuesto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#F0F0F0"
        android:ems="10"
        android:hint="@string/ingrese_detalle"
        android:inputType="textMultiLine"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAgregarProductoServicio"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/cantidad"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombrePresupuesto"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTotalUnitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/total_unitario"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCantidad"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnGuardarPresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#034186"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTotalUnitario" />



    <LinearLayout
        android:id="@+id/iconBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/navegarAHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:clickable="true"
            android:contentDescription="@string/home"
            android:onClick="navegarAHome"
            android:focusable="true" />

        <ImageView
            android:id="@+id/clientes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/clientes"
            android:clickable="true"
            android:contentDescription="@string/listaclientes"
            android:onClick="navegarAListaClientes"
            android:focusable="true" />

        <ImageView
            android:id="@+id/productos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/productos"
            android:clickable="true"
            android:contentDescription="@string/productos"
            android:onClick="navegarAProductos"
            android:focusable="true" />

        <ImageView
            android:id="@+id/verMas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/perfil"
            android:clickable="true"
            android:contentDescription="@string/mas"
            android:onClick="navegarAContacto"
            android:focusable="true" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>